<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ProfilWisataActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="244dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:text="@string/textnama_wisata"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="161dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/textjembatan_siti_nurbaya"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="160dp"
        android:layout_height="33dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/textmasjid_raya_sumbar"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="162dp"
        android:layout_height="104dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/masjid"
        tools:ignore="masjid raya"
        android:contentDescription="@string/textmasjid_raya" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="185dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/jembatan"
        android:contentDescription="@string/textjembatan" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="155dp"
        android:layout_height="29dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="24dp"
        android:text="@string/textistana_pagaruyuang"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="178dp"
        android:layout_height="111dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/pagaruyuang"
        android:contentDescription="@string/textistana_minang" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="186dp"
        android:layout_height="122dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/jam"
        android:contentDescription="@string/textjam_besar" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="178dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/textjam_gadang"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnProfil"
        android:layout_width="112dp"
        android:layout_height="45dp"
        android:text="@string/profil"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>